--- a/Report.ipynb
+++ b/Report.ipynb
@@ -14,7 +14,12 @@
     "### Understand DDPG\n",
     "DDPG use actor-critic approach based on the DPG algorithm(actor-critic stands for two network here)\n",
     "- actor network: specifies the current policy by deterministically mapping states to a specific action.\n",
-    "- critic network: learned by using the Bellman equation as in Q-learning."
+    "- critic network: learned by using the Bellman equation as in Q-learning.  \n",
+    "\n",
+    "DDPG is an off policy alogtithm, which means DDPG collect the states in a replay buffer when the agent interacts with the environment. When training the agent, the buffer randomly yield a batch with respect to (st,at,rt,st+1). We calculate the Q_targets and Q_expected through actor network and critic network respectivly。 loss is calculate through the mean square difference of Q_targets and Q_expected. Then weights in critic network is update through backprobagation. actor loss is defined as:  \n",
+    "`actor_loss = -self.critic_local(states, actions_pred).mean()` which means?? (sorry i don't understand it yet.)  \n",
+    "noise is added when select the action, the benefit of noise usage is demonstrate in this paper:Control policy with autocorrelated noise in reinforcement learning for robotics.\n",
+    "\n"
    ]
   },
   {
@@ -139,10 +144,13 @@
    "source": [
     "Question:\n",
     "In this paper, [Continuous control with deep reinorcement learning](Continuous control with deep reinforcement learning)  \n",
-    "The author said The goal in reinforcement learning is to learn a policy which maximizes the expected return from the start distribution $$J = E_{ri,si∼E,ai∼π }[R1].$$\n",
+    "The author said The goal in reinforcement learning is to learn a policy which maximizes the expected return from the **start distribution** $$J = E_{ri,si∼E,ai∼π }[R1].$$\n",
     "my question is: \n",
     "- what's the difference between expected return and reward?(i still fell ambiguous about this two terminology )  \n",
-    "- how to understand the start distribution in above formula?"
+    "**Reviewer**:The reward should be the actual reward given from the environment, whereas the expected return will likely be based on some estimation of rewards over a series of steps  \n",
+    "**Update**:So, if i put expected return and reward in supervised learning task, the reward is very like the ground truth, and $expected return\\approx prediction$ and our goal is to make the expected return approximatly eaual to reward ? then select the action that can give the max reward?\n",
+    "- how to understand the start distribution in above formula?  \n",
+    "**Update**: Is the author means state distribution instead of start distribution? As i can't understand what is a state distribution.\n"
    ]
   },
   {
